--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tripassignment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mustache-express": "^1.3.0",
+    "socket.io": "^4.0.0",
     "uuid": "^8.3.2"
   }
 }
